--- a/sandbox/build.gradle
+++ b/sandbox/build.gradle
@@ -1,3 +1,9 @@
 apply plugin: 'java'
 apply plugin: 'application'
 mainClassName = "MyFirstProgram"
+repositories {
+    mavenCentral()
+}
+dependencies {
+    implementation 'org.testng:testng:7.3.0'
+}
