--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -1,10 +1,9 @@
 apply plugin: 'java'
-apply plugin: 'application'
-mainClassName = "MyFirstProgram"
+
 repositories {
     mavenCentral()
 }
 dependencies {
     implementation 'org.testng:testng:7.0.0'
-    implementation 'junit:junit:4.12'
+    implementation 'org.seleniumhq.selenium:selenium-java:4.0.0-alpha-6'
 }
