--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -7,6 +7,7 @@ dependencies {
     implementation 'org.testng:testng:7.0.0'
     implementation 'org.seleniumhq.selenium:selenium-java:4.0.0-alpha-6'
     implementation 'org.hamcrest:java-hamcrest:2.0.0.0'
+    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
 }
 task  {
     useTestNG() {
