--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     implementation 'org.seleniumhq.selenium:selenium-java:4.0.0-alpha-6'
     implementation 'org.hamcrest:java-hamcrest:2.0.0.0'
     implementation 'org.apache.httpcomponents:httpclient:4.5.13'
+    implementation 'commons-net:commons-net:3.7.2'
 }
 task  {
     useTestNG() {
