--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -9,6 +9,8 @@ dependencies {
     implementation 'org.hamcrest:java-hamcrest:2.0.0.0'
     implementation 'org.apache.httpcomponents:httpclient:4.5.13'
     implementation 'commons-net:commons-net:3.7.2'
+    implementation 'org.subethamail:subethasmtp:3.1.7'
+    implementation 'ru.lanwen.verbalregex:java-verbal-expressions:1.6'
 }
 task  {
     useTestNG() {
