--- a/rest-sample/build.gradle
+++ b/rest-sample/build.gradle
@@ -9,3 +9,6 @@ dependencies {
     implementation 'org.apache.httpcomponents:httpclient:4.5.13'
     implementation 'org.apache.httpcomponents:fluent-hc:4.5.13'
 }
+test{
+    useTestNG()
+}
