--- a/addressbook-web-tests/src/test/resources/local.properties
+++ b/addressbook-web-tests/src/test/resources/local.properties
@@ -1,3 +1,4 @@
 web.baseUrl = http://localhost/addressbook
 web.adminLogin = admin
 web.adminPassword = secret
+selenium.server= http://192.168.1.40:4444/wd/hub
